tests/typing/good/testfile-type_parameter-5.scala

class A { def m() : AnyVal = return }
object Main { def main(args: Array[String]) { } }
