tests/typing/bad/testfile-return-6.scala

class A { def m() : AnyRef = return }
object Main { def main(args: Array[String]) { } }
